testsuite/tests/polykinds/T7438.stderr

T7438.hs:6:14: error:
    • Couldn't match expected type ‘t’ with actual type ‘t1’
        ‘t’ is untouchable
          inside the constraints: b ~ a
          bound by a pattern with constructor:
                     Nil :: forall k (a :: k). Thrist a a,
                   in an equation for ‘go’
          at T7438.hs:6:4-6
      ‘t’ is a rigid type variable bound by
        the inferred type of go :: Thrist a b -> t1 -> t at T7438.hs:6:1-16
      ‘t1’ is a rigid type variable bound by
        the inferred type of go :: Thrist a b -> t1 -> t at T7438.hs:6:1-16
      Possible fix: add a type signature for ‘go’
    • In the expression: acc
      In an equation for ‘go’: go Nil acc = acc
    • Relevant bindings include
        acc :: t1 (bound at T7438.hs:6:8)
        go :: Thrist a b -> t1 -> t (bound at T7438.hs:6:1)
